feature/GEINFRA-122: Add and generate DeletedUserSite endpoints
