# swagger_server/models/deleted_user_site_create.py
@@ -1,0 +1,122 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class DeletedUserSiteCreate(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, deleted_user_id: str=None, site_id: int=None, deletion_request_via: str=None):  # noqa: E501
+        """DeletedUserSiteCreate - a model defined in Swagger
+
+        :param deleted_user_id: The deleted_user_id of this DeletedUserSiteCreate.  # noqa: E501
+        :type deleted_user_id: str
+        :param site_id: The site_id of this DeletedUserSiteCreate.  # noqa: E501
+        :type site_id: int
+        :param deletion_request_via: The deletion_request_via of this DeletedUserSiteCreate.  # noqa: E501
+        :type deletion_request_via: str
+        """
+        self.swagger_types = {
+            'deleted_user_id': str,
+            'site_id': int,
+            'deletion_request_via': str
+        }
+
+        self.attribute_map = {
+            'deleted_user_id': 'deleted_user_id',
+            'site_id': 'site_id',
+            'deletion_request_via': 'deletion_request_via'
+        }
+
+        self._deleted_user_id = deleted_user_id
+        self._site_id = site_id
+        self._deletion_request_via = deletion_request_via
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'DeletedUserSiteCreate':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The deleted_user_site_create of this DeletedUserSiteCreate.  # noqa: E501
+        :rtype: DeletedUserSiteCreate
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def deleted_user_id(self) -> str:
+        """Gets the deleted_user_id of this DeletedUserSiteCreate.
+
+
+        :return: The deleted_user_id of this DeletedUserSiteCreate.
+        :rtype: str
+        """
+        return self._deleted_user_id
+
+    @deleted_user_id.setter
+    def deleted_user_id(self, deleted_user_id: str):
+        """Sets the deleted_user_id of this DeletedUserSiteCreate.
+
+
+        :param deleted_user_id: The deleted_user_id of this DeletedUserSiteCreate.
+        :type deleted_user_id: str
+        """
+        if deleted_user_id is None:
+            raise ValueError("Invalid value for `deleted_user_id`, must not be `None`")  # noqa: E501
+
+        self._deleted_user_id = deleted_user_id
+
+    @property
+    def site_id(self) -> int:
+        """Gets the site_id of this DeletedUserSiteCreate.
+
+
+        :return: The site_id of this DeletedUserSiteCreate.
+        :rtype: int
+        """
+        return self._site_id
+
+    @site_id.setter
+    def site_id(self, site_id: int):
+        """Sets the site_id of this DeletedUserSiteCreate.
+
+
+        :param site_id: The site_id of this DeletedUserSiteCreate.
+        :type site_id: int
+        """
+        if site_id is None:
+            raise ValueError("Invalid value for `site_id`, must not be `None`")  # noqa: E501
+
+        self._site_id = site_id
+
+    @property
+    def deletion_request_via(self) -> str:
+        """Gets the deletion_request_via of this DeletedUserSiteCreate.
+
+
+        :return: The deletion_request_via of this DeletedUserSiteCreate.
+        :rtype: str
+        """
+        return self._deletion_request_via
+
+    @deletion_request_via.setter
+    def deletion_request_via(self, deletion_request_via: str):
+        """Sets the deletion_request_via of this DeletedUserSiteCreate.
+
+
+        :param deletion_request_via: The deletion_request_via of this DeletedUserSiteCreate.
+        :type deletion_request_via: str
+        """
+        if deletion_request_via is None:
+            raise ValueError("Invalid value for `deletion_request_via`, must not be `None`")  # noqa: E501
+
+        self._deletion_request_via = deletion_request_via
