# swagger_server/models/deleted_user_site_update.py
@@ -1,0 +1,116 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class DeletedUserSiteUpdate(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, deleted_user_id: str=None, site_id: int=None, deletion_confirmed_via: str=None):  # noqa: E501
+        """DeletedUserSiteUpdate - a model defined in Swagger
+
+        :param deleted_user_id: The deleted_user_id of this DeletedUserSiteUpdate.  # noqa: E501
+        :type deleted_user_id: str
+        :param site_id: The site_id of this DeletedUserSiteUpdate.  # noqa: E501
+        :type site_id: int
+        :param deletion_confirmed_via: The deletion_confirmed_via of this DeletedUserSiteUpdate.  # noqa: E501
+        :type deletion_confirmed_via: str
+        """
+        self.swagger_types = {
+            'deleted_user_id': str,
+            'site_id': int,
+            'deletion_confirmed_via': str
+        }
+
+        self.attribute_map = {
+            'deleted_user_id': 'deleted_user_id',
+            'site_id': 'site_id',
+            'deletion_confirmed_via': 'deletion_confirmed_via'
+        }
+
+        self._deleted_user_id = deleted_user_id
+        self._site_id = site_id
+        self._deletion_confirmed_via = deletion_confirmed_via
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'DeletedUserSiteUpdate':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The deleted_user_site_update of this DeletedUserSiteUpdate.  # noqa: E501
+        :rtype: DeletedUserSiteUpdate
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def deleted_user_id(self) -> str:
+        """Gets the deleted_user_id of this DeletedUserSiteUpdate.
+
+
+        :return: The deleted_user_id of this DeletedUserSiteUpdate.
+        :rtype: str
+        """
+        return self._deleted_user_id
+
+    @deleted_user_id.setter
+    def deleted_user_id(self, deleted_user_id: str):
+        """Sets the deleted_user_id of this DeletedUserSiteUpdate.
+
+
+        :param deleted_user_id: The deleted_user_id of this DeletedUserSiteUpdate.
+        :type deleted_user_id: str
+        """
+
+        self._deleted_user_id = deleted_user_id
+
+    @property
+    def site_id(self) -> int:
+        """Gets the site_id of this DeletedUserSiteUpdate.
+
+
+        :return: The site_id of this DeletedUserSiteUpdate.
+        :rtype: int
+        """
+        return self._site_id
+
+    @site_id.setter
+    def site_id(self, site_id: int):
+        """Sets the site_id of this DeletedUserSiteUpdate.
+
+
+        :param site_id: The site_id of this DeletedUserSiteUpdate.
+        :type site_id: int
+        """
+
+        self._site_id = site_id
+
+    @property
+    def deletion_confirmed_via(self) -> str:
+        """Gets the deletion_confirmed_via of this DeletedUserSiteUpdate.
+
+
+        :return: The deletion_confirmed_via of this DeletedUserSiteUpdate.
+        :rtype: str
+        """
+        return self._deletion_confirmed_via
+
+    @deletion_confirmed_via.setter
+    def deletion_confirmed_via(self, deletion_confirmed_via: str):
+        """Sets the deletion_confirmed_via of this DeletedUserSiteUpdate.
+
+
+        :param deletion_confirmed_via: The deletion_confirmed_via of this DeletedUserSiteUpdate.
+        :type deletion_confirmed_via: str
+        """
+
+        self._deletion_confirmed_via = deletion_confirmed_via
